syntax = "proto3";
package fx.evm.v1;

import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";

option go_package = "github.com/pundiai/fx-core/v8/x/evm/types";

// Msg defines the x/evm Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  // CallContract defines a (governance) operation for updating the x/evm module
  // callContract. The authority defaults to the x/gov module account.
  rpc CallContract(MsgCallContract) returns (MsgCallContractResponse);
}

// MsgCallContract defines the request structure for executing a CallContract
// message.
message MsgCallContract {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "evm/MsgCallContract";

  // authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // specify to call the contract address
  string contract_address = 2;
  string data = 3;
}

// MsgCallContractResponse defines the response structure for executing a
// CallContract message.
message MsgCallContractResponse {}
